testsuite/tests/warnings/should_fail/T24396c.stderr
T24396c.hs:8:13: error: [GHC-14995]
    Illegal use of the ‘data’ keyword:
      data f "warning on data level"
    in a WARNING pragma
    Suggested fix:
      Perhaps you intended to use the ‘ExplicitNamespaces’ extension (implied by ‘TypeFamilies’ and ‘TypeOperators’)

T24396c.hs:12:13: error: [GHC-14995]
    Illegal use of the ‘type’ keyword:
      type F "warning on type level"
    in a WARNING pragma
    Suggested fix:
      Perhaps you intended to use the ‘ExplicitNamespaces’ extension (implied by ‘TypeFamilies’ and ‘TypeOperators’)

T24396c.hs:17:16: error: [GHC-14995]
    Illegal use of the ‘data’ keyword:
      data g "deprecation on data level"
    in a DEPRECATED pragma
    Suggested fix:
      Perhaps you intended to use the ‘ExplicitNamespaces’ extension (implied by ‘TypeFamilies’ and ‘TypeOperators’)

T24396c.hs:21:16: error: [GHC-14995]
    Illegal use of the ‘type’ keyword:
      type G "deprecation on type level"
    in a DEPRECATED pragma
    Suggested fix:
      Perhaps you intended to use the ‘ExplicitNamespaces’ extension (implied by ‘TypeFamilies’ and ‘TypeOperators’)
